# family-learning

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_add_indexes.py  0003_add_item_image.py  0004_add_game_progress.py  0005_rename_review_states.py  0006_add_subject_table.py  0007_add_answer_child_answered_index.py  0008_add_parental_review.py  0009_parental_review_fixes.py  0010_multi_package_review.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  game_progress.py  package.py  parental_review.py  review.py  session.py  subject.py  user.py
backend/app/package_schema/: package_v1.json
backend/app/routers/: auth.py  children.py  farmageddon.py  game_progress.py  lessons.py  packages.py  parental_reviews.py  questions.py  rewards.py  tts.py
backend/app/schemas/: activity.py  farmageddon.py  game_progress.py  package.py  parental_review.py  session.py  user.py
backend/tests/: conftest.py  test_activity_ticker.py  test_api_auth.py  test_api_children.py  test_api_lessons.py  test_api_packages.py  test_api_progress.py  test_game_progress.py  test_game_window.py  test_grade_token_suppression.py  test_lesson_engine.py  test_lesson_selection.py  test_merge_packages.py  test_package_detail.py  test_package_validator.py  test_parental_reviews.py  test_reward_service.py  test_spaced_repetition.py  test_subject.py  test_svg_validator.py
(+136 files in other folders)
